# rem8xer

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  allocation_strategy.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
assets/: CMDMAPPING_5_0-CGmPKoBT.m8s  V5EMPTY-C3POO0vy.m8s  V6EMPTY-x5dZuUUM.m8s  index-4bN6sZDR.js  index-B2hlgEAr.js  index-BMHMKsOE.js  index-CLguAPCN.css  index-CPPUCWM4.js  index-CTEu5OLX.js  index-CkTKxjyk.js  index-DSGOKaZx.js  index-DZ8D1lAK.js  index-g8pU6O3D.js  index-nGaoV7Kn.js  m8_files_bg-BfC0wrtz.wasm  m8_files_bg-BkoHscJW.wasm  m8_files_bg-CBUhOe_8.wasm  m8_files_bg-COOE-OrU.wasm  (+8 more)
m8-files/: Cargo.toml
m8-files/examples/: read_song.rs
m8-files/examples/songs/: HS FS M.m8s  REVE HF.m8s  REVE MM.m8s  REVE1EQL.m8s
m8-files/examples/songs/CommandMappingV4/: CMDMAPPING.m8s
m8-files/examples/songs/REVE/: HS FS.m8s  REVE ML.m8s  REVE MT.m8s
m8-files/src/: eq.rs  eq_render.rs  fx.rs  instrument.rs  lib.rs  param_gather.rs  reader.rs  remapper.rs  scale.rs  song.rs  songs.rs  version.rs  web.rs  writer.rs
m8-files/src/instruments/: common.rs  external_inst.rs  fmsynth.rs  hypersynth.rs  macrosynth.rs  midi.rs  mod.rs  modulator.rs  sampler.rs  wavsynth.rs
m8-files/src/instruments/modulator/: adsr_env.rs  ahd_env.rs  drum_env.rs  lfo.rs  mod.rs  tracking_env.rs  trig_env.rs
rem8x/: Cargo.toml
rem8x/examples/: read_instrument.rs  read_song.rs
rem8x/examples/songs/REVE/: REVE CHL.m8s  REVE REL.m8s
rem8x/src/: eq_render.rs  lib.rs  param_gather.rs  web.rs
(+62 files in other folders)
