[package]
name = "m8-files"
description = "Parse the Dirtywave M8's file formats"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/AlexCharlton/m8-files"
documentation = "https://docs.rs/m8-files"
homepage = "https://github.com/AlexCharlton/m8-files"
license = "MIT"
keywords = ["music"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
arr_macro = "0.2.1"
array-concat = "0.5.3"
byteorder = "1.4.3"
console_error_panic_hook = "=0.1.7"
js-sys = "0.3.72"
num_enum = "0.7.3"
num-complex = "0.4"
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib", "rlib"]
