[package]
name = "rem8x"
description = "Web module for m8 file handling"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["music"]

[features]
"const_panic" = []

[dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2.84"
m8-files ={ path="../m8-files" }

[lib]
crate-type = ["cdylib", "rlib"]
